--- a/home_work_9/style.css
+++ b/home_work_9/style.css
@@ -9,109 +9,111 @@ body {
     margin: 0 auto;
 }
 
-.content {
-    max-width: 1610px;
+.container {
+    width: 1160px;
     margin: 0 auto;
+
 }
 
-header nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+/* COMMON STYLES END */
 
+.header-menu {
     padding: 20px 0;
-    width: 72%;
-    margin: 0 auto;
+    user-select: none;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
 }
 
 .logo {
-    margin-left: 0;
-}
-
-.logo img {
-    display: block;
+    padding: 10px 0;
 }
 
 .nav-menu {
     display: flex;
-    gap: 25px;
-    margin: 0 auto;
+    align-items: center;
 }
 
 .nav-menu a {
-    font-size: 18px;
     text-decoration: none;
     text-transform: uppercase;
-    font-weight: 400;
     color: #22262A;
+    font-size: 18px;
+    padding: 0 15px;
 }
 
-.links {
+.user-panel {
     display: flex;
-    gap: 44px;
-    margin-right: 0;
+    align-items: center;
+    gap: 40px;
+
 }
 
-.links img {
-    display: block;
-    height: 18px;
-}
+/* HEADER STYLES STARTS */
 
-/* NAV MENU END */
-.header-content {
-    background-image: url(images/1_1.svg);
+header {
+    background-image: url('images/1\ 1.jpg');
+    background-position: 0 85px;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
+    padding-bottom: 100px;
+}
+
+.welcome {
+    width: 455px;
+}
+
+.main-top {
+    height: 650px;
+    display: flex;
+    justify-content: end;
+    align-items: end;
 
 }
 
-.header-content span,
-.header-content button,
-.adv-content span,
-.adv-content button {
+.welcome span,
+.adv-content span {
     font-size: 18px;
     font-weight: 500;
     text-transform: uppercase;
-
 }
 
-.header-content h1,
-.adv-content h1 {
+.welcome h1,
+.adv-content h3 {
     font-size: 80px;
     text-transform: uppercase;
     margin: 0;
 }
 
-.header-content p {
+.welcome p {
     font-size: 18px;
     font-weight: 500;
 }
 
-.header-content button,
-.adv-content button {
+
+button {
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
     padding: 10px 22px;
     color: #fff;
     border: none;
     background-color: #22262A;
+    margin-right: 35px;
 }
 
-.header-content>div {
-    width: 42%;
-    padding-top: 400px;
-    padding-bottom: 100px;
-    margin-left: auto;
+
+button:hover,
+button:focus {
+    cursor: pointer;
+    background-color: #E7F5F8;
+    color: black
 }
 
-.header-content-buttons {
-    display: flex;
-    justify-content: space-between;
-    width: 50%;
-}
 
-.header-content-buttons button:hover,
-.header-content button:focus {
-    background-color: darkblue;
-}
+
 
 /* FNISHED HEADER */
 
@@ -121,50 +123,41 @@ header nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
     margin: 115px 0;
 }
 
-.wrapper img {
-    margin: 10px;
+.wrapper div>div:nth-child(2) {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 15px;
 }
 
 .catagory-link {
-    background-image: url("images/Mask Group (2).png");
-    filter: brightness(50%);
-
-    height: 584px;
-    width: 35%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-
+    position: relative;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
-    padding: 0 0 28px 25px;
-    margin-bottom: 10px;
+    align-items: center;
 }
 
-.catagory-name {
-    text-align: center;
+.catagory-link img {
+    filter: brightness(50%);
+}
 
-    font-size: 18px;
-    background-color: #fff;
-    padding: 7px 23px;
-    border: none;
+.catagory-link button {
+    position: absolute;
+    left: 5%;
+    top: 88%;
+    text-align: center;
     text-transform: uppercase;
     font-weight: bold;
+    border: none;
+    background: white;
+    color: black;
 }
 
-/* First section finished */
 
-/* Second section starts */
+/*SECTION STARTS */
 
-.clothes-section {
-    width: 72%;
-    margin: 0 auto;
-}
 
 .description {
     text-align: center;
@@ -213,7 +206,7 @@ header nav {
 
 }
 
-/* Third section starts */
+/*SECTION STARTS */
 
 .capitalaze {
     text-transform: capitalize;
@@ -246,36 +239,37 @@ header nav {
     margin-top: 120px;
     text-transform: uppercase;
     color: #22262A;
+    text-decoration: none;
+    border-bottom: 1px solid black;
+
 }
 
-/* Adv-content */
+/*SECTION STARTS */
 
 .adv-content {
     background-image: url("images/17.png");
+    background-position: 0 85px;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
 
 }
 
 .adv-content>div {
-    width: 42%;
     padding-top: 434px;
     padding-bottom: 123px;
-    padding-left: 230px;
 }
 
-/* Footer starts */
-footer {
+/*SECTION STARTS */
+
+.about {
     background-color: #F2F8FC;
 }
 
 .info {
-    width: 72%;
-    margin: 0 auto;
-    padding-top: 115px;
+    padding-top: 65px;
 
     display: flex;
-    align-items: center;
+    align-items: start;
     justify-content: space-between;
 }
 
@@ -291,6 +285,15 @@ footer {
 
 .email a {
     color: #22262A;
+    text-decoration: none;
+    border-bottom: 1px solid #22262A;
+}
+
+.phone-number a {
+    display: block;
+    text-decoration: none;
+    color: #22262A;
+    padding: 5px;
 }
 
 .social-media img {
@@ -302,12 +305,10 @@ footer {
     margin-top: 15px;
 }
 
-.second-part {}
-
-.second-part h1 {
+.second-part h3 {
     font-size: 25px;
     text-transform: uppercase;
-    margin-bottom: 25px;
+    margin: 0 0 25px 0;
 }
 
 .second-part input {
@@ -335,6 +336,8 @@ input[type="submit"] {
 .info-list-item ul {
     list-style: none;
     text-transform: capitalize;
+    padding-left: 0;
+
 }
 
 .info-list-item ul li {
@@ -343,12 +346,14 @@ input[type="submit"] {
 
 .info-list-item h3 {
     margin-bottom: 27px;
+    text-align: start;
 }
-.info-list-item ul li a{
+
+.info-list-item ul li a {
     text-decoration: none;
     color: #22262A;
 }
-
+/* FOOTER STARTS */
 .rights {
     background-color: #E7F5F8;
     padding: 35px;
